syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.trade.finance.prod";
option java_outer_classname = "financeProductInfo";
option objc_class_prefix = "FPI";

service FinanceProductService {
    rpc GetFinanceProdInfo (FinanceProdInfoQuery) returns (FinanceProdInfoCollection) {
    }
}
//获取当前理财产品信息
message FinanceProdInfoQuery {
  int64 prod_id = 1;//理财产品Id,
  int64 group_id = 2;//理财产品类组id
}

message FinanceProdInfoCollection{
  repeated FinanceProdInfo financeProdInfo = 1;
}

message FinanceProdInfo {
  int64 prod_id = 1 ;//理财产品Id,
  int64 group_id = 2; //理财产品类组id
  string prod_name = 3 ; //理财产品名称
  string fund_code = 4 ;//该理财产品中的某个基金编号,
  int32 fund_quantity = 5 ;//该理财产品中的基金份额百分比,
}